--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,10 @@ html, body {
   max-width: 100%;
 }
 
-html,
-body {
+html,body {
 	height: 100%;
 	font-family: "Muli", sans-serif;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
 	/* text-align: right; */
 	scroll-behavior: smooth;
 }
