--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,3 @@
-/******************************************************************
-  Template Name: Gym
-  Description:  Gym Fitness HTML Template
-  Author: Colorlib
-  Author URI: https://colorlib.com
-  Version: 1.0
-  Created: Colorlib
-******************************************************************/
-
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Service Section
-6.  Class Section
-7.  Price Plan Section
-8.  Trainer Section
-9.  Contact
-10.  Footer Style
-
--------------------------------------------------------------------*/
-
-/*----------------------------------------*/
-
-/* Template default CSS
-/*----------------------------------------*/
  * {
   box-sizing: border-box;
 }
@@ -730,50 +697,58 @@ ol {
 }
 
 /*---------------------
-  Banner Section
+	Banner Section
 -----------------------*/
 
 .banner-section {
-	height: 550px;
+	height: 420px;
+	width:90%;
+	border-radius: 40px 40px;
+	margin: auto;
+	object-fit:fill;
 	display: -webkit-box;
 	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
+	display: grid;
+	-webkit-box-align: center; 
 	-ms-flex-align: center;
-	align-items: center;
+	/* align-items: center; */
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
 }
 
 .bs-text.service-banner .bt-tips {
-	margin-bottom: 35px;
+	margin-bottom: 100px !important;
 }
 
 .bs-text h2 {
 	font-size: 48px;
-	color: #ffffff;
-	font-weight: 700;
+	color: #f36100;
+	font-weight: 500;
 	text-transform: uppercase;
-	margin-bottom: 25px;
+	margin-bottom: 20px;
 }
 
 .bs-text .bt-tips {
+	margin: 0% auto;
 	font-size: 20px;
-	color: #c4c4c4;
-	font-weight: 700;
+	color: #ffffff;
+	font-weight: bold;
 	text-transform: uppercase;
-	margin-bottom: 45px;
+	margin-bottom: 20px;
 }
 
 .bs-text .primary-btn {
 	background: transparent;
 	border: 2px solid #f36100;
+	border-radius: 20px;
+	font-size: 20px;
+	font-weight: 300;
 }
-
-.bs-text .play-btn {
-	display: inline-block;
-	height: 70px;
+	
+	.bs-text .play-btn {
+		display: inline-block;
+		height: 70px;
 	width: 70px;
 	background: #f36100;
 	border-radius: 50%;
@@ -781,6 +756,7 @@ ol {
 	text-align: center;
 	font-size: 36px;
 	color: #ffffff;
+	/* margin:30px; */
 }
 
 /*---------------------
